@@ -2,12 +2,11 @@ package com.gianfro.games.explainers;
 
 import com.gianfro.games.entities.*;
 import com.gianfro.games.sudoku.solver.SudokuSolver;
-import com.gianfro.games.techniques.ClaimingCandidates;
+import com.gianfro.games.techniques.basic.ClaimingCandidates;
 import com.gianfro.games.utils.SudokuList;
 import com.gianfro.games.utils.Utils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ExplainerClaimingCandidates {
 
@@ -58,7 +57,7 @@ public class ExplainerClaimingCandidates {
                 step.getChangeLogs()
                         .stream()
                         .filter(x -> x.getSolvingTechnique().equals(ClaimingCandidates.CLAIMING_CANDIDATES))
-                        .collect(Collectors.toList());
+                        .toList();
 
         changeLogs.forEach(changeLog -> System.out.println(explain(changeLog)));
     }
